opam-version: "2.0"
synopsis: "Ctypes bindings to libsodium"
description: "Ctypes bindings to libsodium 1.0.9+ which wraps NaCl."
maintainer: "Ahrefs <github@ahrefs.com>"
authors: [
  "David Sheets <sheets@alum.mit.edu>"
  "Peter Zotov <whitequark@whitequark.org>"
  "Benjamin Canou <benjamin@ocamlpro.com>"
]
homepage: "https://github.com/ahrefs/ocaml-sodium/"
bug-reports: "https://github.com/ahrefs/ocaml-sodium/issues/"
dev-repo: "git+https://github.com/ahrefs/ocaml-sodium.git"
tags: ["org:ahrefs"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest"] {with-test}
]
depends: [
  "ocaml" {>= "4.01.0"}
  "dune" {build & >= "1.5"}
  "base-bigarray"
  "base-bytes"
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "ctypes" {>= "0.13.0"}
  "ounit2" {with-test & >= "2.2.6"}
]
depexts: [
   ["libsodium-dev"] {os-family = "debian"} 
   ["security/libsodium"] {os-family = "freebsd"} 
   ["libsodium"] {os-distribution = "homebrew" & os = "macos"} 
]
post-messages: [
  "This package requires installation of libsodium-dev (>= 1.0.9)"
  { failure & os = "debian" }
  "This package requires installation of libsodium-dev (>= 1.0.9)"
  { failure & os = "ubuntu" }
  "This package requires installation of security/libsodium (>= 1.0.9)"
  { failure & os = "freebsd" }
  "This package requires installation of libsodium (>= 1.0.9)"
  { failure & os = "macos" }
]
